# agvpro_stereo

./: .gitignore
Log/: OrbbecSDK.log.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/stereo_camera_pkg/lib/stereo_camera_pkg/: camera_info  left_camera_node  new_odom  right_camera_node  stereo_camera__node  stereo_camera_node  stereo_node  stereo_split_node  stereo_split_node_rgb
install/stereo_camera_pkg/share/stereo_camera_pkg/: apt_rtabmap.launch.py  calib.launch.py  ekf_rtabmap.launch.py  left_calibration.launch.py  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  new_rtabmap.launch.py  new_usb.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  prtabmap.launch.py  py_cablib.launch.py  rtabmap.launch.py  stereo_calibration.launch.py  stereo_calibration_launch.py  stereo_camera.launch.py  stereo_rgbd.launch.py  stereo_rtabmap.launch.py  usb.launch.py  usb_raw.launch.py
install/stereo_camera_pkg/share/stereo_camera_pkg/cmake/: stereo_camera_pkgConfig-version.cmake  stereo_camera_pkgConfig.cmake
install/stereo_camera_pkg/share/stereo_camera_pkg/config/: ekf_stereo_wheel.yaml  left.yaml  left1.yaml  left2.yaml  left320.yaml  left5.yaml  left6.yaml  left640.yaml  left_1.yaml  left_84_320_240.yaml  left_84_640_400.yaml  left_camera_info.yaml  left_raw.yaml  right.yaml  right1.yaml  right2.yaml  right320.yaml  right5.yaml  right6.yaml  right640.yaml  right7.yamal  right_1.yaml  right_84_320_240.yaml  (+2 more)
install/stereo_camera_pkg_py/lib/stereo_camera_pkg_py/: v4l2
install/stereo_camera_pkg_py/share/stereo_camera_pkg_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/stereo_camera_pkg/: CMakeLists.txt  package.xml
src/stereo_camera_pkg/config/: left.yaml  left2.yaml  left_1.yaml  left_84_320_240.yaml  left_84_640_400.yaml  left_raw.yaml  right.yaml  right2.yaml  right_1.yaml  right_84_320_240.yaml  right_84_640_400.yaml  right_camera_info.yaml  right_raw.yaml
src/stereo_camera_pkg/launch/: ekf_rtabmap.launch.py  rtabmap.launch.py  stereo_calibration.launch.py  usb.launch.py
src/stereo_camera_pkg/src/: camera_info.cpp  left_camera_node.cpp  right_camera_node.cpp  stereo_camera_node.cpp  stereo_node.cpp  stereo_split_node.cpp  stereo_split_node_rgb.cpp
src/stereo_camera_pkg/xml/: usb.launch
src/stereo_camera_pkg_py/: package.xml  setup.py
src/stereo_camera_pkg_py/launch/: EKF.launch.py  rgbd_rtabmap.launch.py  rtabmap.launch.py  slam.launch.py  stereo.launch.py  stereo_calibration.launch.py  v4l2.launch.py
src/stereo_camera_pkg_py/stereo_camera_pkg_py/: stereo_info.py
(+12 files in other folders)
